src/App.css
html, body {
  height: 100%;
}

body {
  display: flex;
  background-image: url('../public/bg.jpg');
  background-size: cover;
  background-position: center;
  flex-direction: column;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.settings {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 25%;
  min-width: 500px;
  padding: 24px;
  box-sizing: border-box;
  background-color: white;
  border-radius: 12px;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.6);
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 24px;
}

label {
  display: flex;
  flex-direction: column;
  margin-bottom: 12px;
}

input,
select,
textarea {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #ccc;
  font-size: 16px;
  margin-top: 4px;
  white-space: pre-wrap;
}

textarea {
  height: 140px;
  width: 350px;
  resize: none;
}

button[type="submit"],
button[type="button"] {
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  background-color: #0077cc;
  color: #fff;
  font-size: 16px;
  cursor: pointer;
  margin-top: 12px;
}

button[type="download"] {
  background-color: #4CAF50; /* Green */
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
  border-radius: 8px;
  animation: pulse 1s infinite;
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.2);
  }
  100% {
    transform: scale(1);
  }
}

.card-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 24px;
  justify-items: center;
  align-items: start;
  margin-top: 12px;
  margin-left: 28px;
  margin-right: 28px;
  font-size: 14px;
}

.card {
  background-image: url('../public/dogcard.png');
  background-size: cover;
  background-position: center;
  width: 407px;
  height: 584px;
  display: flex;
  flex-direction: column;
  
}

.card-name {
  position: absolute;
  font-family: 'BLAME', sans-serif;
  margin-top: 12px;
  margin-left: 28px;
  font-size: 14px;
}

.card-group {
  position: inherit;
  font-family: 'BLAME', sans-serif;
  margin-top: 52px;
  margin-left: 15px;
  font-size: 14px;
  width: 200px;
}

.card-group.otto {
  color: #404040;
}

.card-group.bushido {
  color: #1B8031;
}

.card-group.rat {
  color: #00127E;
}

.card-group.shop {
  color: #0761B7;
}

.card-group.realm {
  color: #7A0406;
}

.card-group.pit {
  color: #DB8D07;
}

.card-group.cultist {
  color: #B200FF;
}

.card-type {
  font-family: 'BLAME', sans-serif;
  margin-top: -40px;
  margin-left: auto;
  margin-right: 15px;
  font-size: 14px;
  text-align: justify;
  max-width : 100px;
  text-align: right;
}

.card-type.active {
  color: #7E070B;
}

.card-type.passive {
  color: #0565BB;
}

.card-type.aod {
  color: #FF0000;
}

.card-type.pre-turn {
  color: #DB8D07;
}

.card-type.board {
  color: #1A7F31;
}

.card-description {
  position: absolute;
  font-family: 'ninjutsuBB', sans-serif;
  margin-top: 440px;
  margin-left: 28px;
  font-size: 24px;
  word-wrap: break-word;
  white-space: pre-wrap;
  text-align: justify;
  max-width : 350px;
}

.card-image-container {
  position: absolute;
  margin-top: 80px;
  margin-left: 32px;
  width: 342px;
  height: 342px;
  overflow: hidden;
}

.card-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  font-size: 12px;
  color: #fff;
  text-align: center;
  background-color: rgba(0, 0, 0, 0.3);
}

.footer a {
  color: #fff;
  text-decoration: none;
}

.footer a:hover {
  text-decoration: underline;
}

